--- a/package.json
+++ b/package.json
@@ -1,42 +1,45 @@
 {
-  "name": "project-knifes",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^2.3.0",
-    "@tanstack/react-query": "^5.59.20",
-    "@types/lodash": "^4.17.13",
-    "axios": "^1.7.7",
-    "lodash": "^4.17.21",
-    "lodash.debounce": "^4.0.8",
-    "lodash.throttle": "^4.1.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2",
-    "react-toastify": "^11.0.1",
-    "sass": "^1.79.4"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.11.1",
-    "@tanstack/eslint-plugin-query": "^5.60.1",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.11.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^15.9.0",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
-  }
+	"name": "project-knifes",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@reduxjs/toolkit": "^2.3.0",
+		"@tanstack/react-query": "^5.59.20",
+		"@types/lodash": "^4.17.13",
+		"axios": "^1.7.7",
+		"lodash": "^4.17.21",
+		"lodash.debounce": "^4.0.8",
+		"lodash.throttle": "^4.1.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.54.1",
+		"react-redux": "^9.1.2",
+		"react-router-dom": "^6.26.2",
+		"react-toastify": "^11.0.1",
+		"sass": "^1.79.4"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.11.1",
+		"@tanstack/eslint-plugin-query": "^5.60.1",
+		"@types/react": "^18.3.10",
+		"@types/react-dom": "^18.3.0",
+		"@vitejs/plugin-react-swc": "^3.5.0",
+		"eslint": "^9.11.1",
+		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
+		"eslint-plugin-react-refresh": "^0.4.12",
+		"gh-pages": "^6.2.0",
+		"globals": "^15.9.0",
+		"typescript": "^5.5.3",
+		"typescript-eslint": "^8.7.0",
+		"vite": "^5.4.8"
+	}
 }
