did some fixing bugs

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
+	"homepage": "https://bodya4000.github.io/project-knifes",
 	"name": "project-knifes",
 	"private": true,
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build",
+		"deploy": "gh-pages -d dist",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview"
@@ -33,6 +34,7 @@
 		"@types/react": "^18.3.10",
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react-swc": "^3.5.0",
+		"copy-webpack-plugin": "^12.0.2",
 		"eslint": "^9.11.1",
 		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
 		"eslint-plugin-react-refresh": "^0.4.12",
